--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -11,192 +11,238 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_user_2" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Halo"
-                android:textColor="#FFFFEA"
-                android:textSize="45sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
-            <TextView
-                android:id="@+id/tv_username"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/img_info"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="(Username)"
-                android:textColor="#FFFFEA"
-                android:textSize="38sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/img_off"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/ic_off" />
+                android:src="@drawable/ic_info" />
+           <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginHorizontal="100dp">
+               <ImageView
+                   android:layout_width="wrap_content"
+                   android:layout_height="match_parent"
+                   android:layout_margin="3dp"
+                   android:src="@drawable/ic_home" />
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:fontFamily="@font/preg"
+                   android:text="Beranda"
+                   android:textColor="#FFFFEA"
+                   android:textSize="18sp"
+                   android:textStyle="bold" />
+           </LinearLayout>
+            <ImageView
+                android:id="@+id/img_off"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_off" />
     </LinearLayout>
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:background="@drawable/soft_orange_rounded_top"
-        android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/tv_day"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:ems="10"
-            android:inputType="date"
-            android:text="Senin, 01 Januari 2020"
-            android:textColor="#FF934F"
-            android:textSize="28dp"
-            android:fontFamily="@font/preg"/>
-
-        <TextView
-            android:id="@+id/tv_hour"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:ems="10"
-            android:gravity="end"
-            android:inputType="time"
-            android:text="07.00"
-            android:textColor="#FF934F"
-            android:textSize="28dp"
-            android:fontFamily="@font/preg"/>
-
-        <LinearLayout
-            android:id="@+id/btn_suhu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_gravity="center"
-            android:gravity="center_vertical"
-            android:background="@drawable/button_background"
-            android:orientation="vertical"
-            android:padding="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_thermometer" />
-
-                <TextView
-                    android:id="@+id/tv_suhu"
-                    android:layout_width="132dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/preg"
-                    android:gravity="end"
-                    android:textColor="#FFFFFF"
-                    android:textSize="60sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/preg"
-                    android:text=" °C"
-                    android:textColor="#FFFFFF"
-                    android:textSize="55sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Suhu"
-                android:textSize="30sp"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/btn_kelembapan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_gravity="center"
-            android:gravity="center_vertical"
-            android:background="@drawable/button_background"
-            android:orientation="vertical"
-            android:padding="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_drop" />
-
-                <TextView
-                    android:id="@+id/tv_kelembapan"
-                    android:layout_width="149dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/preg"
-                    android:gravity="end"
-                    android:textColor="#FFFFFF"
-                    android:textSize="60sp"
-                    android:textStyle="bold" />
-                <TextView
-                    android:text="  %"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#FFFFFF"
-                    android:textSize="60sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/preg"/>
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Kelembapan"
-                android:textSize="30sp"
-                android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
-        </LinearLayout>
-
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="bottom"
             android:orientation="vertical">
-
-            <Button
-                android:id="@+id/btn_lanjut"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="15dp"
-                android:layout_gravity="center"
-                android:background="@drawable/button_background"
-                android:text="Lanjut"
-                android:textColor="#FFFFFF"
-                android:textSize="26dp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
+                android:orientation="horizontal"
+                android:layout_margin="20dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_user_2" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/preg"
+                        android:text="Halo"
+                        android:textColor="#FFFFEA"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/preg"
+                        android:text="(Username)"
+                        android:textColor="#FFFFEA"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/soft_orange_rounded_top"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+                    android:ems="10"
+                    android:inputType="date"
+                    android:text="Senin, 01 Januari 2020"
+                    android:textColor="#FF934F"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/preg"/>
+
+                <TextView
+                    android:id="@+id/tv_hour"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+                    android:ems="10"
+                    android:gravity="end"
+                    android:inputType="time"
+                    android:text="07:00:00"
+                    android:textColor="#FF934F"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/preg"/>
+
+                <LinearLayout
+                    android:id="@+id/btn_suhu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:background="@drawable/button_background"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_thermometer" />
+                        <TextView
+                            android:id="@+id/tv_suhu"
+                            android:layout_width="140dp"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/preg"
+                            android:gravity="end"
+                            android:text="30"
+                            android:textColor="#FFFFFF"
+                            android:textSize="35sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:text="°C"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="35sp"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/preg"/>
+                    </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Suhu"
+                        android:textSize="30sp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/preg"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btn_kelembapan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="25dp"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:background="@drawable/button_background"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="98dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_drop" />
+
+                        <TextView
+                            android:id="@+id/tv_kelembapan"
+                            android:layout_width="140dp"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/preg"
+                            android:gravity="end"
+                            android:text="80"
+                            android:textColor="#FFFFFF"
+                            android:textSize="35sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:text="%"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="35sp"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/preg"/>
+                    </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kelembapan"
+                        android:textSize="30sp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/preg"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btn_lanjut"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="15dp"
+                        android:background="@drawable/button_background"
+                        android:fontFamily="@font/preg"
+                        android:text="Lanjut"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
