--- a/app/src/main/res/layout/activity_kelembapan.xml
+++ b/app/src/main/res/layout/activity_kelembapan.xml
@@ -7,101 +7,152 @@
     android:orientation="vertical"
     android:background="#FF934F"
     tools:context=".KelembapanActivity">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Kelembapan"
-        android:textStyle="bold"
-        android:textSize="44dp"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:fontFamily="@font/preg"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="20dp">
-        <TextView
-            android:id="@+id/tv_date"
+        android:layout_margin="15dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/img_chevron_left"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:ems="8"
-            android:inputType="date"
-            android:text="Senin, 01 Januari 2020"
-            android:textColor="#FFFFFF"
-            android:textSize="23sp"
-            android:fontFamily="@font/preg"/>
-
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:inputType="time"
-            android:text="07:00.00"
-            android:textColor="#FFFFFF"
-            android:textSize="23sp"
-            android:fontFamily="@font/preg"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:background="@drawable/soft_orange_rounded_top"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_speedometer" />
+            android:src="@drawable/ic_chevron_left" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:layout_marginHorizontal="75dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:id="@+id/tv_hum"
-                android:textColor="#000000"
-                android:textSize="60sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
-            <TextView
+                android:fontFamily="@font/preg"
+                android:text="Kelembapan"
+                android:textColor="#FFFFEA"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="%"
-                android:textColor="#000000"
-                android:textSize="60sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:src="@drawable/ic_drop_2" />
         </LinearLayout>
-        <TextView
-            android:id="@+id/tv_day"
+
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/orange_rounded_top"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:gravity="center"
-            android:ems="12"
-            android:inputType="date"
-            android:text="Senin, 01 Januari 2020"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
-            android:fontFamily="@font/preg"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_hum"
-            tools:listitem="@layout/item_hum"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </androidx.recyclerview.widget.RecyclerView>
-
+            android:layout_height="match_parent"
+            tools:visibility="gone" />
     </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Kelembapan"
+                android:textStyle="bold"
+                android:textSize="30dp"
+                android:textColor="#FFFFFF"
+                android:gravity="center"
+                android:fontFamily="@font/preg"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="20dp">
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:ems="8"
+                    android:inputType="date"
+                    android:text="Senin, 01 Januari 2020"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/preg"/>
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:inputType="time"
+                    android:text="07:00.00"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/preg"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/soft_orange_rounded_top"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_speedometer" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:id="@+id/tv_hum"
+                        android:textColor="#000000"
+                        android:text="80"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/preg"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/preg"
+                        android:gravity="center"
+                        android:text="%"
+                        android:textColor="#000000"
+                        android:textSize="35sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/orange_rounded_top"
+                    android:ems="12"
+                    android:fontFamily="@font/preg"
+                    android:gravity="center"
+                    android:inputType="date"
+                    android:text="Senin, 01 Januari 2020"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_hum"
+                    tools:listitem="@layout/item_hum"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </androidx.recyclerview.widget.RecyclerView>
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
