--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -150,15 +150,15 @@
                             android:textColor="#FFFFFF"
                             android:textSize="35sp"
                             android:textStyle="bold" />
-                        <TextView
-                            android:text="°C"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textColor="#FFFFFF"
-                            android:textSize="35sp"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/preg"/>
+<!--                        <TextView-->
+<!--                            android:text="°C"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:gravity="center"-->
+<!--                            android:textColor="#FFFFFF"-->
+<!--                            android:textSize="35sp"-->
+<!--                            android:textStyle="bold"-->
+<!--                            android:fontFamily="@font/preg"/>-->
                     </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
@@ -200,15 +200,15 @@
                             android:textColor="#FFFFFF"
                             android:textSize="35sp"
                             android:textStyle="bold" />
-                        <TextView
-                            android:text="%"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textColor="#FFFFFF"
-                            android:textSize="35sp"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/preg"/>
+<!--                        <TextView-->
+<!--                            android:text="%"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:gravity="center"-->
+<!--                            android:textColor="#FFFFFF"-->
+<!--                            android:textSize="35sp"-->
+<!--                            android:textStyle="bold"-->
+<!--                            android:fontFamily="@font/preg"/>-->
                     </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
