GrafikActivity, BerandaActivity, KelembapanActivity, SuhuActivity

--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -11,23 +11,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_margin="6dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
             <ImageView
                 android:id="@+id/img_info"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_info" />
+                android:src="@drawable/ic_info"
+                android:layout_gravity="left"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp">
-               <ImageView
-                   android:layout_width="wrap_content"
-                   android:layout_height="match_parent"
-                   android:layout_margin="3dp"
-                   android:src="@drawable/ic_home" />
+<!--               <ImageView-->
+<!--                   android:layout_width="wrap_content"-->
+<!--                   android:layout_height="match_parent"-->
+<!--                   android:layout_margin="3dp"-->
+<!--                   android:src="@drawable/ic_home" />-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
@@ -55,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="20dp">
+                android:layout_marginHorizontal="20dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -103,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:padding="3dp"
                     android:ems="10"
-                    android:inputType="date"
+                    android:gravity="center_horizontal"
                     android:text="Senin, 01 Januari 2020"
                     android:textColor="#FF934F"
                     android:textSize="20dp"
@@ -115,8 +116,8 @@
                     android:layout_height="wrap_content"
                     android:padding="3dp"
                     android:ems="10"
-                    android:gravity="end"
-                    android:inputType="time"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal"
                     android:text="07:00:00"
                     android:textColor="#FF934F"
                     android:textSize="20dp"
