--- a/app/src/main/res/layout/activity_kelembapan.xml
+++ b/app/src/main/res/layout/activity_kelembapan.xml
@@ -70,7 +70,7 @@
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:ems="8"
+                    android:ems="10"
                     android:inputType="date"
                     android:text="Senin, 01 Januari 2020"
                     android:textColor="#FFFFFF"
@@ -97,6 +97,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/gaugemeter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -117,15 +118,15 @@
                         android:textStyle="bold"
                         android:fontFamily="@font/preg"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/preg"
-                        android:gravity="center"
-                        android:text="%"
-                        android:textColor="#000000"
-                        android:textSize="35sp"
-                        android:textStyle="bold" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:fontFamily="@font/preg"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="%"-->
+<!--                        android:textColor="#000000"-->
+<!--                        android:textSize="35sp"-->
+<!--                        android:textStyle="bold" />-->
                 </LinearLayout>
 
                 <TextView
