--- a/app/src/main/res/layout/activity_suhu.xml
+++ b/app/src/main/res/layout/activity_suhu.xml
@@ -97,6 +97,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/gaugemeter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -116,15 +117,15 @@
                         android:textSize="35sp"
                         android:textStyle="bold"
                         android:fontFamily="@font/preg"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="°C"
-                        android:textColor="#000000"
-                        android:textSize="35sp"
-                        android:textStyle="bold"
-                        android:fontFamily="@font/preg"/>
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="°C"-->
+<!--                        android:textColor="#000000"-->
+<!--                        android:textSize="35sp"-->
+<!--                        android:textStyle="bold"-->
+<!--                        android:fontFamily="@font/preg"/>-->
                 </LinearLayout>
                 <TextView
                     android:id="@+id/tv_day"
