--- a/app/src/main/res/layout/item_hum.xml
+++ b/app/src/main/res/layout/item_hum.xml
@@ -35,6 +35,7 @@
                 android:textSize="18sp"
                 android:fontFamily="@font/preg"/>
             <ImageView
+                android:id="@+id/ic_hose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
