--- a/app/src/main/res/drawable/ic_chevron_left.xml
+++ b/app/src/main/res/drawable/ic_chevron_left.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="12">
   <path
       android:pathData="M7.4063,1.4063L2.8125,6L7.4063,10.5938L6,12L0,6L6,0L7.4063,1.4063Z"
-      android:fillColor="#340D66"/>
+      android:fillColor="#644A85"/>
 </vector>
