--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -92,7 +92,7 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:background="@drawable/soft_orange_rounded_top"
@@ -227,20 +227,43 @@
                     android:gravity="bottom"
                     android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/btn_lanjut"
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="15dp"
-                        android:background="@drawable/button_background"
+                        android:text="Lihat Grafik"
+                        android:textSize="24sp"
+                        android:textColor="@color/purple_700"
                         android:fontFamily="@font/preg"
-                        android:text="Lanjut"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:layout_gravity="center"
+                        android:gravity="center"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginBottom="16dp">
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/pilihTanggal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Pilih Tanggal"
+                            android:background="@drawable/button_background"
+                            android:padding="8dp"
+                            android:textColor="@color/white"
+                            android:layout_marginHorizontal="6dp"/>
+                        <Button
+                            android:id="@+id/btn_lanjut"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@drawable/button_background"
+                            android:fontFamily="@font/preg"
+                            android:text="Lanjut"
+                            android:textColor="#FFFFFF"
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
