--- a/app/src/main/res/layout/activity_grafik.xml
+++ b/app/src/main/res/layout/activity_grafik.xml
@@ -10,39 +10,43 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:gravity="center_horizontal"
+        android:layout_height="?android:attr/actionBarSize"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/img_chevron_left"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_gravity="left"
             android:src="@drawable/ic_chevron_left" />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="108dp">
+            android:layout_gravity="center"
+            android:gravity="center"
+
+            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:fontFamily="@font/preg"
                 android:text="Grafik"
+                android:layout_marginLeft="-24dp"
                 android:textColor="#FFFFEA"
                 android:textSize="18sp"
                 android:textStyle="bold" />
             <ImageView
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="3dp"
                 android:src="@drawable/ic_bar_chart" />
         </LinearLayout>
-
         <ImageView
-
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            tools:visibility="gone" />
+            android:src="@drawable/ic_chevron_left" />
     </LinearLayout>
 
     <ScrollView
@@ -58,6 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:text="Grafik"
+                android:visibility="gone"
                 android:textStyle="bold"
                 android:textSize="30dp"
                 android:textColor="#FFFFFF"
@@ -66,9 +71,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="649dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_height="360dp"
+                android:layout_marginHorizontal="25dp"
                 android:background="@drawable/soft_orange_rounded_top"
                 android:orientation="vertical">
 
@@ -89,10 +93,23 @@
                     android:id="@+id/grafik"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="50dp" />
+                    android:layout_margin="5dp"/>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginVertical="24dp"
+                android:background="@drawable/soft_orange_rounded_top"
+                android:orientation="vertical">
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/grafik2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp" />
 
             </LinearLayout>
         </LinearLayout>
