--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -89,6 +89,7 @@
                 android:gravity="center"
                 android:text="Sudah memiliki akun? Klik di sini"
                 android:textColor="#FF934F"
+                android:visibility="invisible"
                 android:textSize="20sp"/>
             <ProgressBar
                 android:id="@+id/progressBar"
