--- a/app/src/main/res/layout/activity_grafik.xml
+++ b/app/src/main/res/layout/activity_grafik.xml
@@ -85,7 +85,7 @@
                     android:fontFamily="@font/preg"
                     android:gravity="center"
                     android:inputType="date"
-                    android:text="Senin, 01 Januari 2020"
+                    android:text="-"
                     android:textColor="#FF934F"
                     android:textSize="18sp" />
 
