--- a/app/src/main/res/layout/activity_o_t_p.xml
+++ b/app/src/main/res/layout/activity_o_t_p.xml
@@ -8,11 +8,11 @@
     tools:context=".OTPActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="25dp"
         android:layout_marginTop="95dp"
-        android:layout_marginRight="25dp"
+        android:paddingHorizontal="30dp"
+        android:layout_gravity="center"
         android:background="@drawable/soft_orange_rounded_top"
         android:orientation="vertical">
 
@@ -32,25 +32,25 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center_horizontal"
-                android:text="Masukkan"
-                android:textColor="#FF934F"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="Kode Verifikasi"
-                android:textColor="#FF934F"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:text="Masukkan"
+            android:textColor="#FF934F"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/preg"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Kode Verifikasi"
+            android:textColor="#FF934F"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/preg"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
