--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -14,35 +14,35 @@
         android:layout_margin="6dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/img_info"
+        <ImageView
+            android:id="@+id/img_info"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_info"
+            android:layout_gravity="left"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="100dp">
+            <!--               <ImageView-->
+            <!--                   android:layout_width="wrap_content"-->
+            <!--                   android:layout_height="match_parent"-->
+            <!--                   android:layout_margin="3dp"-->
+            <!--                   android:src="@drawable/ic_home" />-->
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_info"
-                android:layout_gravity="left"/>
-           <LinearLayout
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginHorizontal="100dp">
-<!--               <ImageView-->
-<!--                   android:layout_width="wrap_content"-->
-<!--                   android:layout_height="match_parent"-->
-<!--                   android:layout_margin="3dp"-->
-<!--                   android:src="@drawable/ic_home" />-->
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:fontFamily="@font/preg"
-                   android:text="Beranda"
-                   android:textColor="#FFFFEA"
-                   android:textSize="18sp"
-                   android:textStyle="bold" />
-           </LinearLayout>
-            <ImageView
-                android:id="@+id/img_off"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_off" />
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/preg"
+                android:text="Beranda"
+                android:textColor="#FFFFEA"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/img_off"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_off" />
     </LinearLayout>
 
     <ScrollView
@@ -105,7 +105,7 @@
                     android:padding="3dp"
                     android:ems="10"
                     android:gravity="center_horizontal"
-                    android:text="Senin, 01 Januari 2020"
+                    android:text="-"
                     android:textColor="#FF934F"
                     android:textSize="20dp"
                     android:fontFamily="@font/preg"/>
@@ -118,7 +118,7 @@
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:layout_gravity="center_horizontal"
-                    android:text="07:00:00"
+                    android:text="-"
                     android:textColor="#FF934F"
                     android:textSize="20dp"
                     android:fontFamily="@font/preg"/>
@@ -147,19 +147,19 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/preg"
                             android:gravity="end"
-                            android:text="30"
+                            android:text="-"
                             android:textColor="#FFFFFF"
                             android:textSize="35sp"
                             android:textStyle="bold" />
-<!--                        <TextView-->
-<!--                            android:text="°C"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textColor="#FFFFFF"-->
-<!--                            android:textSize="35sp"-->
-<!--                            android:textStyle="bold"-->
-<!--                            android:fontFamily="@font/preg"/>-->
+                        <!--                        <TextView-->
+                        <!--                            android:text="°C"-->
+                        <!--                            android:layout_width="match_parent"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:gravity="center"-->
+                        <!--                            android:textColor="#FFFFFF"-->
+                        <!--                            android:textSize="35sp"-->
+                        <!--                            android:textStyle="bold"-->
+                        <!--                            android:fontFamily="@font/preg"/>-->
                     </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
@@ -197,19 +197,19 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/preg"
                             android:gravity="end"
-                            android:text="80"
+                            android:text="-"
                             android:textColor="#FFFFFF"
                             android:textSize="35sp"
                             android:textStyle="bold" />
-<!--                        <TextView-->
-<!--                            android:text="%"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:gravity="center"-->
-<!--                            android:textColor="#FFFFFF"-->
-<!--                            android:textSize="35sp"-->
-<!--                            android:textStyle="bold"-->
-<!--                            android:fontFamily="@font/preg"/>-->
+                        <!--                        <TextView-->
+                        <!--                            android:text="%"-->
+                        <!--                            android:layout_width="match_parent"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:gravity="center"-->
+                        <!--                            android:textColor="#FFFFFF"-->
+                        <!--                            android:textSize="35sp"-->
+                        <!--                            android:textStyle="bold"-->
+                        <!--                            android:fontFamily="@font/preg"/>-->
                     </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
