--- a/app/src/main/res/layout/activity_kelembapan.xml
+++ b/app/src/main/res/layout/activity_kelembapan.xml
@@ -70,20 +70,21 @@
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:ems="10"
                     android:inputType="date"
-                    android:text="Senin, 01 Januari 2020"
+                    android:text="-"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:fontFamily="@font/preg"/>
 
                 <TextView
                     android:id="@+id/tv_time"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="end"
+                    android:layout_marginLeft="20dp"
+                    android:layout_gravity="right"
+                    android:gravity="right"
                     android:inputType="time"
-                    android:text="07:00.00"
+                    android:text="/-"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:fontFamily="@font/preg"/>
@@ -118,15 +119,15 @@
                         android:textStyle="bold"
                         android:fontFamily="@font/preg"/>
 
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:fontFamily="@font/preg"-->
-<!--                        android:gravity="center"-->
-<!--                        android:text="%"-->
-<!--                        android:textColor="#000000"-->
-<!--                        android:textSize="35sp"-->
-<!--                        android:textStyle="bold" />-->
+                    <!--                    <TextView-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:fontFamily="@font/preg"-->
+                    <!--                        android:gravity="center"-->
+                    <!--                        android:text="%"-->
+                    <!--                        android:textColor="#000000"-->
+                    <!--                        android:textSize="35sp"-->
+                    <!--                        android:textStyle="bold" />-->
                 </LinearLayout>
 
                 <TextView
