--- a/app/src/main/res/layout/activity_suhu.xml
+++ b/app/src/main/res/layout/activity_suhu.xml
@@ -70,20 +70,20 @@
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:ems="10"
                     android:inputType="date"
-                    android:text="Senin, 01 Januari 2020"
+                    android:text="-"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:fontFamily="@font/preg"/>
 
                 <TextView
                     android:id="@+id/tv_time"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
                     android:gravity="end"
                     android:inputType="time"
-                    android:text="07:00.00"
+                    android:text="-"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:fontFamily="@font/preg"/>
@@ -117,15 +117,15 @@
                         android:textSize="35sp"
                         android:textStyle="bold"
                         android:fontFamily="@font/preg"/>
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:gravity="center"-->
-<!--                        android:text="°C"-->
-<!--                        android:textColor="#000000"-->
-<!--                        android:textSize="35sp"-->
-<!--                        android:textStyle="bold"-->
-<!--                        android:fontFamily="@font/preg"/>-->
+                    <!--                    <TextView-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:gravity="center"-->
+                    <!--                        android:text="°C"-->
+                    <!--                        android:textColor="#000000"-->
+                    <!--                        android:textSize="35sp"-->
+                    <!--                        android:textStyle="bold"-->
+                    <!--                        android:fontFamily="@font/preg"/>-->
                 </LinearLayout>
                 <TextView
                     android:id="@+id/tv_day"
